# backend/src/modules/user/application/use-cases/change-user-plan/change-user-plan.dto.ts
@@ -1,4 +1,5 @@
 export interface ChangeUserPlanRequestDto {
   userId: string;
   planCode: string;
+  scheduleAt?: string;
 }
